optimisation de l'image avec jlink